# globus-sdk-python

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs-requirements.txt  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.adoc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  RELEASING  RELEASING.md  appveyor.yml  build.cmd  changelog.rst  mypy.ini  optional-dependencies.txt  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini  toxfile.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  changelog.yaml  has_changelog.yaml  publish_to_pypi.yaml  publish_to_test_pypi.yaml  readthedocs-pr-links.yaml  test.yaml  update_pr_references.yaml
changelog.d/: 20211007_220647_sirosen_use_scriv_test.rst  20211008_144403_sirosen_better_transfer_filters.rst  20211008_222558_sirosen_test_pr_branch.rst  20211011_210434_sirosen_fix_decorator_types.rst  20211013_190353_sirosen_fix_crypto_bound.rst  20211027_211325_sirosen_transfer_data_iteritems.rst  20211104_181024_sirosen_add_resource_server_property.rst  20211105_171713_sirosen_type_preserving_has_paginator.rst  20211108_210542_sirosen_experimental_mypy_plugin.rst  20211115_204209_sirosen_generic_paginator.rst  20211117_174041_rudyardrichter_config_get_app_url.rst  20211201_145304_aaschaer_scopes_type.rst  20211201_202405_sirosen_propogate_response_properties.rst  20211210_202544_sirosen_py310_compat.rst  20211220_175329_sirosen_add_identity_map_custom_cache.rst  20220110_210459_sirosen_add_notification_opts.rst  20220111_201918_sirosen_support_pylint.rst  20220114_171240_sirosen_typed_paginator.rst  20220124_155823_aaschaer_groups.rst  20220125_220544_sirosen_search_client_updates.rst  20220125_232653_sirosen_search_client_updates.rst  20220126_221236_sirosen_search_client_updates.rst  20220127_174428_rudyardrichter_add_gcs_qargs.rst  20220208_114626_aaschaer_gcs_roles.rst  20220210_160456_sirosen_iterable_identities_response.rst  20220211_202511_sirosen_bound_te.rst  20220218_193538_sirosen_fix_skipped_errors_pagination.rst  20220222_110056_aaschaer_transfer_transport.rst  20220225_211912_sirosen_failover_to_reason.rst  20220228_213746_sirosen_group_include.rst  20220302_153247_sirosen_iter_namespaces.rst  20220314_131036_sirosen_known_url_scopes.rst  20220317_002219_sirosen_temporary_transport_settings.rst  20220404_164345_rudyardrichter_add_timer_client.rst  20220408_044943_sirosen_allow_str_data.rst  20220415_153608_sirosen_expose_more_http_details.rst  20220426_121025_sirosen_mutable_scopes.rst  20220429_185515_sirosen_collection_policy_helpers.rst  20220513_214357_sirosen_half_lazy_imports.rst  20220519_152006_sirosen_more_sg_policies.rst  (+314 more)
docs/: .buildinfo  Makefile  README.md  api.rst  authorization.html  authorization.rst  changelog.rst  clients.html  clients.rst  conf.py  config.html  config.rst  core.rst  deprecations.html  deprecations.rst  examples.html  examples.rst  exceptions.html  exceptions.rst  genindex.html  getting_started.html  getting_started.rst  index.html  index.rst  installation.html  installation.rst  license.rst  local_endpoints.rst  make.bat  nitpick_ignore.txt  oauth.html  oauth.rst  objects.inv  optional_dependencies.html  optional_dependencies.rst  py-modindex.html  responses.html  responses.rst  scopes.rst  search.html  (+7 more)
docs-source/: authorization.rst  examples.rst  index.rst  oauth.rst  optional_dependencies.rst  responses.rst
docs-source/clients/: base.rst
docs-source/examples/: client_credentials.rst  three_legged_oauth.rst
docs-source/oauth/: flows.rst  tutorial.rst
docs/_modules/: index.html
docs/_sources/: authorization.txt  examples.txt  exceptions.txt  getting_started.txt  oauth.txt  tutorial.txt
docs/api/: baseclient.rst  exceptions.rst  response.rst
docs/authorization/: gare.rst  globus_authorizers.rst  index.rst  login_flows.rst
docs/clients/: auth.html  auth.rst  base.html  base.rst  search.rst  transfer.html  transfer.rst
docs/core/: base_client.rst  exceptions.rst  index.rst  paging.rst  responses.rst  transport.rst  utils.rst  warnings.rst
docs/examples/: advanced_transfer.rst  authorization.html  authorization.rst  client_credentials.html  client_credentials.rst  endpoint_type_enum.rst  group_listing.rst  guest_collection_creation.rst  index.rst  minimal_transfer_script.rst  native_app.html  native_app.rst  recursive_ls.rst  three_legged_oauth.html  three_legged_oauth.rst  timer_operations.rst  transfer_relative_deadlines.rst
docs/experimental/: auth_requirements_errors.rst  consents.rst  globus_app.rst  index.rst  scope_parser.rst  session_errors.rst
docs/oauth/: flows.html  flows.rst  resource_servers.html  resource_servers.rst  tutorial.html  tutorial.rst
docs/responses/: auth.rst  transfer.rst
docs/services/: auth.rst  compute.rst  flows.rst  gcs.rst  groups.rst  index.rst  search.rst  timer.rst  timers.rst  transfer.rst
docs/testing/: getting_started.rst  index.rst  method_list.rst  reference.rst  warnings.rst
docs/tutorial/: index.rst  legacy_tutorial.rst  minimal_app.rst  tutorial_recap.py  tutorial_with_login_step.py
docs/tutorials/: minimal_app.rst  register_app.rst  tutorial_with_login_step.py
globus_sdk/: __init__.py  _sphinxext.py  auth.py  base.py  config.py  exc.py  globus.cfg  nexus.py  paging.py  response.py  transfer.py  version.py
globus_sdk/_pyinstaller/: hook-globus_sdk.py
globus_sdk/auth/: __init__.py  client.py  identity_map.py  oauth2_authorization_code.py  oauth2_constants.py  oauth2_flow_manager.py  oauth2_native_app.py  oauth_flow_manager.py  token_response.py
requirements/: README.rst  docs.in  docs.txt  test-mindeps.in  test-mindeps.txt  test.in  test.txt  typing-mindeps.in  typing-mindeps.txt  typing.in  typing.txt
scripts/: changelog2md.py  ensure_exports_are_documented.py  ensure_min_python_is_tested.py  freezedeps.py  get_python_requires.py  rtd-pre-sphinx-build.sh
tests/: README  common.py  conftest.py  stub-testmod.sh
tests/non-pytest/poetry-lock-test/: README  pyproject.toml
(+1318 files in other folders)
