[tool.poetry]
name = "poetry-install-test"
version = "0.1.0"
description = ""
authors = ["Stephen Rosen <sirosen@globus.org>"]

[tool.poetry.dependencies]
python = "^3.8"
globus-sdk = { path = "../../.." }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
